// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts execution definition to AFM Execution should remove empty attribute filters and not cause RAIL-2083 1`] = `
Array [
  Object {
    "positiveAttributeFilter": Object {
      "in": Object {
        "values": Array [
          "value 1",
        ],
      },
      "label": Object {
        "identifier": Object {
          "id": "label.product.id.name",
          "type": "label",
        },
      },
    },
  },
  Object {
    "negativeAttributeFilter": Object {
      "label": Object {
        "identifier": Object {
          "id": "label.product.id.name",
          "type": "label",
        },
      },
      "notIn": Object {
        "values": Array [
          "value 2",
        ],
      },
    },
  },
]
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has filters 1`] = `
Object {
  "execution": Object {
    "attributes": Array [
      Object {
        "label": Object {
          "identifier": Object {
            "id": "label.account.id.name",
            "type": "label",
          },
        },
        "localIdentifier": "a_label.account.id.name",
      },
      Object {
        "label": Object {
          "identifier": Object {
            "id": "label.activity.id.subject",
            "type": "label",
          },
        },
        "localIdentifier": "a_label.activity.id.subject",
      },
    ],
    "auxMeasures": Array [],
    "filters": Array [
      Object {
        "positiveAttributeFilter": Object {
          "in": Object {
            "values": Array [
              "myAccount",
            ],
          },
          "label": Object {
            "identifier": Object {
              "id": "label.account.id.name",
              "type": "label",
            },
          },
        },
      },
    ],
    "measures": Array [
      Object {
        "definition": Object {
          "measure": Object {
            "item": Object {
              "identifier": Object {
                "id": "acugFHNJgsBy",
                "type": "metric",
              },
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    ],
  },
  "resultSpec": Object {
    "dimensions": Array [],
    "totals": Array [],
  },
  "settings": Object {},
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has no filter 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
    "totals": Array [],
  },
  "settings": Object {},
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with definition that has one attribute with alias and one attribute without localId 1`] = `
Object {
  "execution": Object {
    "attributes": Array [
      Object {
        "alias": "alias",
        "label": Object {
          "identifier": Object {
            "id": "attribute1",
            "type": "label",
          },
        },
        "localIdentifier": "a_724874d1_attribute1",
      },
      Object {
        "label": Object {
          "identifier": Object {
            "id": "attribute2",
            "type": "label",
          },
        },
        "localIdentifier": "a_attribute2",
      },
    ],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
    "totals": Array [],
  },
  "settings": Object {},
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with dimensions 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [
      Object {
        "itemIdentifiers": Array [
          "localId1",
        ],
        "localIdentifier": "dim_0",
      },
    ],
    "totals": Array [],
  },
  "settings": Object {},
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with empty definition 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
    "totals": Array [],
  },
  "settings": Object {},
}
`;

exports[`converts execution definition to AFM Execution should return AFM Execution with sorts 1`] = `
Object {
  "execution": Object {
    "attributes": Array [],
    "auxMeasures": Array [],
    "filters": Array [],
    "measures": Array [],
  },
  "resultSpec": Object {
    "dimensions": Array [],
    "totals": Array [],
  },
  "settings": Object {},
}
`;
